canvas visibility for modal fix

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -65,6 +65,9 @@ html.no-scroll {
   nav.collapsible-menu {
     visibility: hidden;
   }
+  canvas{
+    visibility: hidden;
+  }
 }
 
 /* Scrollbar container */
